--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,40 +1,115 @@
-aniso8601==9.0.1
+alembic==1.7.4
+anyio==3.3.4
+apache-airflow==2.2.0
+apache-airflow-providers-ftp==2.0.1
+apache-airflow-providers-http==2.0.1
+apache-airflow-providers-imap==2.0.1
+apache-airflow-providers-sqlite==2.0.1
+apispec==3.3.2
 appdirs==1.4.4
-attrs==21.2.0
-black==21.5b1
-certifi==2020.12.5
-chardet==4.0.0
+argcomplete==1.12.3
+attrs==20.3.0
+autopep8==2.0.0
+Babel==2.9.1
+black==21.4b2
+blinker==1.4
+cattrs==1.5.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
 click==7.1.2
-flake8==3.9.2
+clickclick==20.10.2
+colorama==0.4.4
+colorlog==5.0.1
+commonmark==0.9.1
+croniter==1.0.15
+cryptography==35.0.0
+defusedxml==0.7.1
+dill==0.3.4
+dnspython==2.1.0
+docutils==0.16
+email-validator==1.1.3
+flake8==3.9.1
 Flask==1.1.4
+Flask-AppBuilder==3.3.4
+Flask-Babel==2.0.0
+Flask-Caching==1.10.1
+Flask-JWT-Extended==3.25.1
+Flask-Login==0.4.1
 flask-marshmallow==0.14.0
-flask-restx==0.4.0
+Flask-OpenID==1.3.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
+graphviz==0.17
 greenlet==1.1.0
-idna==2.10
+gunicorn==20.1.0
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.20.0
+idna==3.3
+inflection==0.5.1
+iso8601==0.1.16
+isodate==0.6.0
+isort==5.9.3
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
+lazy-object-proxy==1.6.0
+lockfile==0.12.2
 lxml==4.6.3
-MarkupSafe==2.0.1
-marshmallow==3.12.1
-marshmallow-sqlalchemy==0.26.0
+Mako==1.1.5
+Markdown==3.3.4
+MarkupSafe==1.1.1
+marshmallow==3.14.0
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
 mccabe==0.6.1
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
-numpy==1.20.3
-pandas==1.2.4
+openapi-schema-validator==0.1.5
+openapi-spec-validator==0.3.1
+packaging==21.0
 pathspec==0.8.1
-pycodestyle==2.7.0
+pendulum==2.1.2
+pip==21.1.1
+prison==0.2.1
+psutil==5.8.0
+pycodestyle==2.9.1
+pycparser==2.20
 pyflakes==2.3.1
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
+Pygments==2.10.0
+PyJWT==1.7.1
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-daemon==2.3.0
+python-dateutil==2.8.2
+python-nvd3==0.15.0
+python-slugify==4.0.1
+python3-openid==3.2.0
+pytz==2021.3
+pytzdata==2020.1
+PyYAML==6.0
 regex==2021.4.4
-requests==2.25.1
+requests==2.26.0
+rfc3986==1.5.0
+rich==10.12.0
+setproctitle==1.2.2
+setuptools==50.3.1
 six==1.16.0
-SQLAlchemy==1.4.15
-SQLAlchemy-Utils==0.37.6
+sniffio==1.2.0
+SQLAlchemy==1.4.36
+SQLAlchemy-JSONField==1.0.0
+SQLAlchemy-Utils==0.37.9
+swagger-ui-bundle==0.0.9
+tabulate==0.8.9
+tenacity==8.0.1
+termcolor==1.1.0
+text-unidecode==1.3
 toml==0.10.2
-urllib3==1.26.4
+tomli==2.0.1
+unicodecsv==0.14.1
+urllib3==1.26.7
 Werkzeug==1.0.1
+wheel==0.35.1
+WTForms==2.3.3
